# flint-platform-agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml.example
.claude/skills/kbd-assess/: SKILL.md
.claude/skills/kbd-status/: SKILL.md
.github/workflows/: ci.yml  real-smoke.yml
.kbd-orchestrator/: constraints.md  current-waypoint.json  current-waypoint.md  memory-outbox.jsonl  project.json
.kbd-orchestrator/phases/a2a-task-catalog/: assessment.md  execution.md  goals.md  hooks.log.jsonl  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/a2a-task-catalog-writes/: assessment-production-readiness.md  assessment.md  execution.md  goals.md  hooks.log.jsonl  plan.md  progress.json
.kbd-orchestrator/phases/forge-gateway-live/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  prior-context.md  progress.json  reflection.md
.kbd-orchestrator/phases/forge-integration-and-real-dispatch/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/forge-writes-and-realtime/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/gate-admin-and-auth-hardening/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/integration-proof-and-debt-closure/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/live-smoke-and-durable-proof/: analysis.md  assessment.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/live-smoke-and-durable-store/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/project-and-application-management/: analysis.md  assessment.md  decision-log.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/project-artifact-depth/: analysis.md  assessment.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/project-read-and-list/: analysis.md  assessment.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/real-sibling-smoke/: analysis.md  assessment.md  execution.md  goals.md  hooks.log.jsonl  library-candidates.json  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/realtime-receipt/: assessment.md  execution.md  goals.md  hooks.log.jsonl  plan.md  progress.json  reflection.md
.kbd-orchestrator/phases/realtime-receipt-unblock/: assessment.md  goals.md  hooks.log.jsonl  progress.json
.opencode/skills/kbd-analyze/: SKILL.md
.prometheus/: events.jsonl
.prometheus/knowledge/wiki/: empty-raw-document.md  empty-source-document.md  index.md  log.md
crates/fpa-app/: Cargo.toml
crates/fpa-app/src/: auth.rs  catalog.rs  error.rs  lib.rs  project_store.rs  task_runner.rs  task_store.rs
crates/fpa-app/src/task_runner/: mod.rs
crates/fpa-app/src/task_runner/tests/: mcp.rs  mod.rs  store.rs
crates/fpa-cli/: Cargo.toml
crates/fpa-cli/src/: main.rs
crates/fpa-domain/: Cargo.toml
crates/fpa-domain/examples/: gen_schema.rs
crates/fpa-domain/schema/: project.schema.json
crates/fpa-domain/src/: ids.rs  lib.rs  task.rs
crates/fpa-domain/src/project/: application.rs  component.rs  mod.rs  schema.rs  sub_agent.rs
crates/fpa-fabric/: Cargo.toml
crates/fpa-fabric/src/: lib.rs
crates/fpa-forge/: Cargo.toml
crates/fpa-forge/src/: lib.rs
crates/fpa-gate/: Cargo.toml
crates/fpa-gate/src/: lib.rs
crates/fpa-gateway/: Cargo.toml
crates/fpa-gateway/src/: api_error.rs  config.rs  identity.rs  jwks.rs  lib.rs  main.rs  state.rs
crates/fpa-gateway/src/routes/: a2a.rs  agui.rs  fabric.rs  mcp.rs  mod.rs
crates/fpa-gateway/tests/: integration_proof.rs
crates/fpa-mcp/: Cargo.toml
crates/fpa-mcp/src/: lib.rs
crates/fpa-ports/: Cargo.toml
crates/fpa-ports/src/: error.rs  fabric.rs  forge.rs  gate.rs  lib.rs  mcp.rs  project_store.rs
crates/fpa-protocol/: Cargo.toml
crates/fpa-protocol/src/: a2a.rs  a2a_std.rs  a2ui.rs  agui.rs  error.rs  lib.rs
crates/fpa-store-pg/: Cargo.toml  schema.sql
crates/fpa-store-pg/src/: lib.rs
openspec/changes/p1-c001-composition-root/: proposal.md  tasks.md
openspec/changes/p1-c002-project-domain-model/: proposal.md  tasks.md
openspec/changes/p1-c003-a2a-task-catalog/: tasks.md
openspec/changes/p1-c004-mcp-transport/: proposal.md  tasks.md
openspec/changes/p10-c001-real-gate/: proposal.md  tasks.md
openspec/changes/p10-c002-real-forge/: proposal.md  tasks.md
openspec/changes/p10-c003-real-fabric/: proposal.md  tasks.md
openspec/changes/p10-c004-fabric-realtime-client/: proposal.md  tasks.md
scripts/: README.md  ci-check.sh  reset-colima.sh
skills/: README.md
skills/list-projects/: SKILL.md
smoke/: .gitignore  Dockerfile  KNOWN-ISSUES.md  README.md  compose.fabric.yml  compose.forge.yml  compose.gate.yml  compose.pgrx.yml  compose.real.yml  compose.smoke.yml  fabric-gateway.Dockerfile  fdb-gateway.Dockerfile  fdb-gateway.Dockerfile.dockerignore  iggy.Dockerfile  package-lock.json  package.json  playwright.config.ts  run-durable-proof.sh  run-real.sh  run.sh  smoke.real.spec.ts  smoke.spec.ts
smoke/dev-idp/: README.md  jwks.json  mint-fabric-bearer.mjs  private-key.pem  public-key.pem
smoke/fabric-config/: keto.yml
smoke/forge-bootstrap/: 00-roles.sql  01-flint-meta.sql  apply.sh
smoke/gate-config/: config.smoke.yaml
(+175 files in other folders)
