[package]
name = "fpa-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
schemars = { workspace = true, optional = true, features = ["uuid1"] }

[features]
# Opt-in JSON Schema derivation; keeps Layer 0 dependency-light by default.
schema = ["dep:schemars"]

# Schema regenerator — only builds under the `schema` feature.
[[example]]
name = "gen_schema"
required-features = ["schema"]

[lints]
workspace = true
