[package]
name = "fpa-fabric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fpa-ports.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
wiremock = "0.6.5"
