[package]
name = "fpa-fabric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fpa-ports.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
# Realtime subscribe: WS client to fabric /ws/v1/subscribe.
tokio-tungstenite.workspace = true
futures.workspace = true
uuid.workspace = true
# Decode EventEnvelope frames off the subscribe socket.
serde_json.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6.5"
# Fake WS server + envelope construction for the subscribe unit test.
frf-domain.workspace = true
