[package]
name = "fpa-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fpa_gateway"
path = "src/lib.rs"

[[bin]]
name = "fpa-gateway"
path = "src/main.rs"

[dependencies]
# composition root — the ONLY crate that imports concrete adapters
fpa-domain.workspace = true
fpa-ports.workspace = true
fpa-app.workspace = true
fpa-protocol.workspace = true
fpa-forge.workspace = true
fpa-fabric.workspace = true
fpa-gate.workspace = true
fpa-mcp.workspace = true

axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
# Integration proof (p5-c004): drive the real router without a socket, mock the
# planes at the HTTP boundary. Versions pinned to what axum 0.8 already resolves.
wiremock = "0.6.5"
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"

[lints]
workspace = true
