[package]
name = "fpa-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fpa-ports.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
