[package]
name = "fpa-store-pg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fpa-domain.workspace = true
fpa-ports.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
# Ephemeral Postgres for the restart-survival test (#[ignore]d — needs Docker).
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

[lints]
workspace = true
